@@ -395,6 +395,7 @@ the payload contains an array of translation request commands which
 this response depends upon.
 
 The following request packets are currently supported:
+\texttt{SESSION},
 \texttt{REMOTE\_HOST}, \texttt{HOST}, \texttt{LANGUAGE},
 \texttt{USER\_AGENT}, \texttt{QUERY\_STRING}.
 
